syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "WalletService.Api.Models.Protos.Funds";

package funds;

service Funds {
	rpc HasEnoughFunds (EnoughFundsRequest) returns (BaseResponse);
	rpc Reserve (ReserveRequest) returns (ReserveResponse);
	rpc Capture (FundsRequest) returns (BaseResponse);
	rpc Refund (FundsRequest) returns (BaseResponse);
	rpc GetHistory(HistoryRequest) returns (HistoryResponseList);
}

message EnoughFundsRequest {
	int32 playerId = 1;
	int64 cost = 2;
}

message BaseResponse {
	bool success = 1;
	string errorMsg = 2;
}

message ReserveRequest {
	int32 playerId = 1;
	int64 amount = 2;
}

message ReserveResponse {
	bool success = 1;
	string errorMsg = 2;
	int32 reservationId = 3;
}

message FundsRequest {
	int32 reservationId = 1;
}

message HistoryRequest {
	int32 playerId = 1;
}

enum BalanceType {
    RESERVE = 0;
    CAPTURE = 1;
    REFUND = 2;
    REAL_MONEY_PRIZE = 3;
    BONUS_MONEY_PRIZE = 4;
    LOYALTY_POINTS_PRIZE = 5;
}

message HistoryResponse {
	int64 amount = 1;
	google.protobuf.Timestamp createdOn = 2;
	int64 oldBalance = 3;
	int64 newBalance = 4;
	BalanceType type = 5;
    string reason = 6;
	bool isConfirmed = 7;
}

message HistoryResponseList {
    repeated HistoryResponse items = 1;
}